# wemo-matter-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  COMPATIBILITY.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
config/: bridge.example.json  wemo-bridge.env.example
docs/: CODEX_SETUP.md  HOWTO.md  RELEASES.md
include/wemo_bridge/: endpoint_registry.h  wemo_adapter.h  wemo_adapter_openwemo.h  wemo_adapter_stub.h  wemo_device.h
matter-bridge-app/: .gn  BUILD.gn  DeviceDimmable.cpp  README.md  args.gni  build  build_wemo_bridge.sh  main.cpp  third_party
matter-bridge-app/build_overrides/: asr.gni  bee_sdk.gni  boringssl.gni  bouffalolab_iot_sdk.gni  build.gni  chip.gni  editline.gni  efr32_sdk.gni  freertos.gni  googletest.gni  jlink.gni  jsoncpp.gni  lwip.gni  mbedtls.gni  mt793x_sdk.gni  nlassert.gni  nlfaultinjection.gni  nlio.gni  nxp_sdk.gni  openthread.gni  pigweed.gni  pigweed_environment.gni  psoc6.gni  qpg_sdk.gni  stm32_sdk.gni  ti_simplelink_sdk.gni  tizen.gni  zephyr.gni
matter-bridge-app/include/: CHIPProjectAppConfig.h  DeviceDimmable.h
matter-bridge-app/patches/connectedhomeip/: unit-localization-startup.patch
scripts/: install_bridge_stack.sh  setup_submodules.sh  wemo_bridge_health.sh
scripts/systemd/: wemo-bridge-app.service  wemo-ctrl.service
src/: main.cpp
src/adapters/wemo/: wemo_adapter_openwemo.cpp  wemo_adapter_stub.cpp
src/matter/: endpoint_registry.cpp
