import("//build_overrides/chip.gni")
import("${chip_root}/build/chip/tools.gni")

assert(chip_build_tools)

executable("wemo-bridge-app") {
  sources = [
    "${chip_root}/examples/bridge-app/bridge-common/include/CHIPProjectAppConfig.h",
    "${chip_root}/examples/bridge-app/linux/bridged-actions-stub.cpp",
    "${chip_root}/examples/bridge-app/linux/Device.cpp",
    "${chip_root}/examples/bridge-app/linux/include/Device.h",
    "${chip_root}/examples/bridge-app/linux/include/main.h",
    "main.cpp",
    "../src/adapters/wemo/wemo_adapter_openwemo.cpp",
    "../src/matter/endpoint_registry.cpp",
  ]

  deps = [
    "${chip_root}/examples/bridge-app/bridge-common",
    "${chip_root}/examples/platform/linux:app-main",
    "${chip_root}/src/lib",
  ]

  cflags = [
    "-Wconversion",
    "-Wno-shadow",
  ]
  defines = [ "HAVE_OPENWEMO_ENGINE=1" ]

  include_dirs = [
    "${chip_root}/examples/bridge-app/linux/include",
    "../include",
    "../../openwemo-bridge-core/wemo_engine",
  ]

  lib_dirs = [
    "../../openwemo-bridge-core/wemo_engine",
    "/usr/local/lib",
  ]

  libs = [
    "wemoengine",
    "sqlite3",
    "ixml",
    "upnp",
    "pthread",
  ]

  ldflags = [
    "-Wl,-rpath,/home/harry/wemo-matter/openwemo-bridge-core/wemo_engine",
    "-Wl,-rpath,/usr/local/lib",
  ]

  output_dir = root_out_dir
}

group("default") {
  deps = [ ":wemo-bridge-app" ]
}
